--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/public/images/IconeEGP.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" defer src="/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
     <title>Grupo EGP</title>
   </head>
   <body>
